# Frob_robot

./: .gitignore  .gitmodules  LICENSE  MANUAL.eng.md  MANUAL.md  README.eng.md  README.md  README.ru.md  TASKS.ru.md  file.py
3d_models/: ~$дель робота.a3~  Модель робота.a3d  Модель робота.a3d.bak  Робот.a3d.bak  Рука низкая.a3d  Рука.a3d  сборка робота.a3d.bak
3d_models/Рука/: EBA_01.00.009_servo_plate.m3d  EBA_01.00.011_round_plate.m3d  SG90 servo.m3d
3d_models/исходные/: arduino_uno.a3d.m3d  rasspberry.m3d  ydlidar x4.m3d  ~$-18650-PC6.m3~  ~$lidar x4.m3~  Платформа верхняя.m3d  Платформа верхняя.m3d.bak  аккумулятор_18650.m3d  винт стойка м3.m3d.bak  вольт+амп.m3d  датчик_линии.m3d  колесо_диск.m3d  колесо_покрышка.m3d  мотор_ga25_вал.m3d  мотор_ga25_корпус.m3d  мотор_ga25_муфта.m3d  мотор_ga25_уголок.m3d  плата_зарядки_2s_2a_usb_c.m3d  платформа пластиковая.m3d  преобразователь_понижающий.m3d  тумблер.m3d  холдер_18650_3s.m3d  холдер_18650_корпус.m3d  шаровое_шасси_корпус.m3d  шаровое_шасси_крышка.m3d  шаровое_шасси_шарик.m3d
3d_models/исходные/промежуточные/: колёсный привод midi Q.a3d  колёсный привод midi Q.a3d.bak  холдер_18650.a3d  холдер_18650.a3d.bak  шаровое_шасси.a3d
3d_models/модули/: шаровое_шасси.a3d.bak
Frob_docker/: Dockerfile  docker-compose.yaml  frob.dockerfile  robot_start.sh  user-compose.yaml  user_start.sh
assembly_guide/: FROB_parts_and_prices.xlsx
docker/: robot-compose.yaml  user-compose.yaml  user_start.sh
installation/: install_jazzy_base.sh  install_jazzy_full.sh
models/field/: 180_block_bracing.m3d  field.a3d  ~$0_block_bracing.m3~  ~$field.a3~
models/field/block/: block_0.a3d  block_180.a3d  block_90.a3d  xdf_3mm.m3d  ~$df_3mm.m3~  ~$lock_0.a3~
models/field/furniture/: furniture.a3d  left.m3d  right.m3d  shaft.m3d
models/field/sign/: bottom.m3d  pillar.m3d  sign.m3d  Сборка.a3d
models/robot/: robot.a3d  ~$robot.a3~
models/robot/components/: Router_mounting.m3d  ball_cap.m3d  bumper.m3d  li-po_substrate.m3d  line_sensor.m3d  m3_stand.m3d  micro_platform.m3d  plastic_platform.m3d  small_m3_stand.m3d  stand_to_platform.m3d  upper_plastic_platform.m3d
models/robot/components/ball_bearing/: ball.m3d  ball_bearing.a3d  ball_with_cap.a3d  body.m3d  cap.m3d
models/robot/components/blanks/: М3 Отверстие Вертикальное Печать.frw  М3 Отверстие Печать.frw  М3 Паз Винт Потай Печать.frw  М3 Паз Гайка Печать.frw  М3 паз под гайку вплавную.m3d  М3 паз под гайку.m3d  М3 паз под потай.m3d  Паз М3.m3d  Универсальные отверстия рамки.frw  Универсаьные отверстия крепления рамки.frw
models/robot/components/for_3d_print/: Router_mounting.stp  arduino_body.stp  ball_cap.stp  (+20 more)
ros1/docker/: frob.dockerfile  ros.dockerfile  user-compose.yaml
ros1/src/ros/frob_teleop/: CMakeLists.txt
ros1/src/ros/frob_teleop/src/: frob_teleop.h
ros2/docker/: frob.dockerfile  frob.dockerfile.save  user-compose.yaml  user_start.sh
ros2/src/ros2_ws/: map.pgm
ros2/src/ros2_ws/src/frob_bringup/: package.xml  setup.cfg  setup.py
ros2/src/ros2_ws/src/frob_bringup/frob_bringup/: cmd_vel_teleop.py
ros2/src/ros2_ws/src/frob_bringup/launch/: bringup.launch.py
ros2/src/ros2_ws/src/motor_controller_pkg/: package.xml  setup.cfg  setup.py
ros2/src/ros2_ws/src/motor_controller_pkg/motor_controller_pkg/: imotor_controller.py
ros2/src/ros2_ws/src/ros2_image_saver/: LICENSE  README.md  package.xml  setup.cfg  setup.py
ros2/src/ros2_ws/src/ros2_image_saver/ros2_image_saver/: image_saver.py
ros2/src/ros2_ws/src/ros2_mpu6050/: CMakeLists.txt  README.md  package.xml
ros2/src/ros2_ws/src/ros2_mpu6050/config/: params.yaml
ros2/src/ros2_ws/src/ros2_mpu6050/include/ros2_mpu6050/: mpu6050.h  mpu6050_hal.h  mpu6050_node.h
ros2/src/ros2_ws/src/ros2_mpu6050/launch/: ros2_mpu6050.launch.py
ros2/src/ros2_ws/src/ros2_mpu6050/src/: mpu6050.cpp  mpu6050_calibrate.cpp  mpu6050_hal.cpp  mpu6050_node.cpp
src/arduino/: sketch.ino
src/arduino/sketch/: sketch.ino
src/ros/frob_base/: CMakeLists.txt  package.xml
src/ros/frob_control/: CMakeLists.txt  package.xml
src/ros/frob_driver/: CMakeLists.txt
src/ros/frob_navigation/: package.xml
src/ros/frob_teleop/: package.xml
(+287 files in other folders)
